<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/ic_logo_02"
        />

    <EditText
        android:id="@+id/EditaTextoUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/naranja"
        android:textColorHint="@color/naranja"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/EditaTextoContraseña"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:hint="@string/pin"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/naranja"
        android:textColorHint="@color/naranja"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/botonIngresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:text="@string/ingresar"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/naranja"

        />

    <Button
        android:id="@+id/botonCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:text="@string/crear_cuenta"
        android:textColor="@color/naranja"
        android:textSize="18sp"
        android:backgroundTint="@color/white"
        />

</LinearLayout>