<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/verde_azulado"
        android:paddingHorizontal="20dp">

        <ImageButton
            android:id="@+id/botonAtras"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_flechaatras"
            android:backgroundTint="@color/verde_azulado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:background="@color/verde_azulado"
            android:gravity="center"
            android:text="@string/tema"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/imagen"
        android:textColor="@color/gris_oscuro"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lorem"
        android:textColor="@color/verde_azulado"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lorem"
            android:textColor="@color/verde_azulado"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/imagen"
            android:textColor="@color/gris_oscuro"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nombre_del_tema"
        android:textSize="24sp"
        android:textColor="@color/verde_azulado"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@drawable/ic_icono_play"
        android:backgroundTint="@color/verde_azulado"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lorem"
        android:textColor="@color/verde_azulado"
        android:textSize="15sp" />



</LinearLayout>