<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/verde_azulado"
        android:paddingHorizontal="20dp">

        <ImageButton
            android:id="@+id/botonAtras"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_flechaatras"
            android:backgroundTint="@color/verde_azulado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:background="@color/verde_azulado"
            android:gravity="center"
            android:text="@string/inicio"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            >

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:background="@drawable/rounded_corners2">

                <ImageButton
                    android:id="@+id/botonBusqueda"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_icono_lupa"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/busqueda"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_corners2">

                <ImageButton
                    android:id="@+id/botonEspañol"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_icono_hoja"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/español"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="30dp"
            >

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:background="@drawable/rounded_corners2">

                <ImageButton
                    android:id="@+id/botonMatematicas"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_icono_calculadora"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/matematicas"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_corners2">

                <ImageButton
                    android:id="@+id/botonMensajes"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_icono_sobre"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mensajes"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="30dp"
            >

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:background="@drawable/rounded_corners2">

                <ImageButton
                    android:id="@+id/botonGuardados"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_icono_carpeta_linea"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guardados"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_corners2">

                <ImageButton
                    android:id="@+id/botonConfiguraciones"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_icono_tuerca"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/configuraciones"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>



</LinearLayout>